--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -121,7 +121,7 @@
                         <froala-editor value.two-way="member.story_info.story_text" config.bind="{
                             toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                                  'emoticons', 'color', 'fontSize', 'html'],
-                                 language: 'he'}">
+                                 language: 'he', heightMax: 400}">
                         </froala-editor>
                     </div>
                 </div>
