--- a/src/members/members.html
+++ b/src/members/members.html
@@ -1,4 +1,5 @@
 <template>
+    <require from="./members.css"></require>
 
     <section class="container content-area">
         <div class="row top-head" style="margin-top:30px">
@@ -23,12 +24,11 @@
 
             <div class="member-list content-area">
                 <ul class="list-group">
-                    <li repeat.for="member of members | filter : filter : 32 :'full_name':'name'" class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}"
-                        style="width:110px;float:right;min-height:166px;font-size:9px;vertical-align: text-bottom;background-color:rgba(0,0,0,0);">
-
-                        <a route-href="route: member-details; params.bind: {id:member.id}" style="vertical-align: text-bottom;align-content: center;border:none;">
-                            <img style="width:100px;height:100px;border-radius:50%;" src.bind="member.facePhotoURL" />
-                            <h6 dir="rtl" class="list-group-item-heading" style="text-align: center;">${member.name}</h6>
+                    <li repeat.for="member of members | filter : filter : 32 :'full_name':'name'" 
+                    class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''}">
+                        <a route-href="route: member-details; params.bind: {id:member.id}">
+                            <img src.bind="member.facePhotoURL" />
+                            <h6 dir="rtl" class="list-group-item-heading" >${member.name}</h6>
                     </a>
                     </li>
                 </ul>
