--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,7 @@
 <template>
   <require from="app.css"></require>
-  <div class="container">
+  <require from="scrollbox.css"></require>
+  <div class="container scrollboooox">
     <div class="row">
       <div class="center-block">
         <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation" style="width:1170px;">
@@ -36,10 +37,13 @@
           </div>
         </nav>
 
-        <div class="page-host flexcontainer">
+        <div id="router-view" class="page-host flexcontainer" css="min-height:${min_height}px;margin:0;padding:0;">
           <router-view></router-view>
         </div>
       </div>
+    </div>
+    <div id="footer" class="navbar-fixed-bottomxxx navbar navbar-default" style="border:none;background-color:rgba(0,0,0,0);margin:0;padding:0;">
+      <div class="footer-area "></div>
     </div>
   </div>
 </template>
