--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -102,32 +102,33 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="row" if.bind="user.editing">
-                        <h3>
-                            ${'members.life-summary' & t}
-                        </h3>
-                    </div>
-                    <div class="row fr-view" if.bind="!user.editing && member.story_info.story_text && member.story_info.story_text.length > 0"
-                        style="padding-right: 0;">
-                        <h3>
-                            <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(member.story_info, 'show')">&nbsp;</i>                            ${'members.life-summary' & t}
-                        </h3>
-                        <p dir="rtl" style="overflow:auto;max-height: 200px;" innerhtml.bind="member.story_info.story_text">
+                <div class="col-md-6" style="margin-bottom:16px;">
+                    <h3>
+                        <!--${'members.life-summary' & t}-->
+                        ${story_0.topic}
+                    </h3>
+                    <h4 show.bind="story_0.name" dir="rtl">
+                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>                        ${story_0.name}
+                    </h4>
+                    <div class="story-panel">
+                        <p dir="rtl" innerhtml.bind="story_0.story_text ">
                         </p>
-                    </div>
-
-                    <div class="row" if.bind="user.editing" style="margin-left:40px;margin-top:30px;max-height:250px;">
-                        <froala-editor value.two-way="member.story_info.story_text" config.bind="{
-                            toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
-                                 'emoticons', 'color', 'fontSize', 'html'],
-                                 language: 'he', heightMax: 400}">
-                        </froala-editor>
                     </div>
                 </div>
             </div>
             <div class="row fr-view" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)" dir="rtl">
-                <div class="col-md-3">
+                <div class="col-md-3" if.bind="story_4.story_text != ''">
+                    <h4 show.bind="story_4.name" dir="rtl">
+                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>                        ${story_3.name}
+                    </h4>
+                    <div class="story-panel">
+                        <p dir="rtl" innerhtml.bind="story_4.story_text ">
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-3" if.bind="story_3.story_text != ''">
                     <h4 show.bind="story_3.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>                        ${story_3.name}
@@ -137,7 +138,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" if.bind="story_2.story_text != ''">
                     <h4 show.bind="story_2.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>                        ${story_2.name}
@@ -147,23 +148,13 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" if.bind="story_1.story_text != ''">
                     <h4 show.bind="story_1.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
                         <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>                        ${story_1.name}
                     </h4>
                     <div class="story-panel">
-                        <p dir="rtl" innerhtml.bind="story_1.story_text ">
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-3" style="padding-left:10px;">
-                    <h4 show.bind="story_0.name" dir="rtl">
-                        <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>                        ${story_0.name}
-                    </h4>
-                    <div class="story-panel">
-                        <p dir="rtl" innerhtml.bind="story_0.story_text ">
+                        <p dir="rtl" innerhtml.bind="story_1.story_text">
                         </p>
                     </div>
                 </div>
