photo strip - wip

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,8 +1,7 @@
 <template>
-    <br/><br/><br/><br/><br/>
-    <h1>Home</h1>
-    <dir class="row content-area">
-    </dir>
-    <dir class="row footer-area">
-    </dir>
+    <div class="row" style="margin-top:60px;">
+        <div id="photo-strip">
+            <photo-strip slides.bind="photo_list"></photo-strip>
+        </div>
+    </div>
 </template>
