photo strip starts to work... sometimes...

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,7 +1,7 @@
 <template>
     <div class="row" style="margin-top:60px;">
         <div id="photo-strip">
-            <photo-strip slides.bind="photo_list"></photo-strip>
+            <photo-strip source.bind="photo_list" slides.bind="slides"></photo-strip>
         </div>
     </div>
 </template>
