--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="row" id="photos-container" style="height:560px;overflow:auto;">
                         <a repeat.for="photo of photo_list | filter : filter : 9999 : 'title'" click.trigger="photo_clicked(photo, $event)" 
-                            title.bind="photo.title" class.bind="photo.selected">
+                            aubs-tooltip="text.bind:photo.title" class.bind="photo.selected">
                             <img src="${photo.square_src}" width="${photo_size}" height="${photo_size}" style="margin:0;" />
                         </a>
                     </div>
