--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="row" style="margin-top:60px;">
+    <div style="margin-top:60px;">
         <div id="photo-strip">
             <photo-strip source.bind="photo_list" slides.bind="slides" action.bind="action"></photo-strip>
         </div>
