--- a/src/app.html
+++ b/src/app.html
@@ -1,10 +1,10 @@
 <template>
   <require from="app.css"></require>
   <require from="scrollbox.css"></require>
-  <div class="container scrollboooox">
+  <div class="container">
     <div class="row">
       <div class="center-block">
-        <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation" style="width:1200px;">
+        <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation" stylexxx="width:1200px;">
           <div class="navbar-header navbar-right" style="margin-left: 40px;">
             <a class="navbar-brand" href="#">
               <span>
