--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,7 +1,7 @@
 <template>
     <div style="margin-top:60px;">
         <div id="photo-strip">
-            <photo-strip source.bind="photo_list" slides.bind="slides" action.bind="action"></photo-strip>
+            <photo-strip source.bind="photo_list" slides.bind="slides" action.bind="action" settings.bind="{arrows:true}"></photo-strip>
         </div>
     </div>
 </template>
