--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -102,14 +102,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 fr-view" style="margin-bottom:16px;" if.bind="user.privileges.EDITOR || story_0.story_text != ''")>
+                <div class="col-md-6 fr-view" style="margin-bottom:16px;" if.bind="user.privileges.EDITOR || story_0.story_text != ''" )>
                     <h4 style="margin-top:16px;margin-bottom:0px;color:gray;">
                         ${story_0.topic}
                     </h4>
                     <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_0, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>
-                        ${story_0.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit')">&nbsp;</i>                        ${story_0.name}
                     </h3>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_0.story_text ">
@@ -117,45 +116,45 @@
                     </div>
                 </div>
             </div>
-            <div class="row fr-view" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)" dir="rtl">
-                <div class="col-md-3" show.bind="story_4.story_text != ''" style="float:right;">
+            <div class="row fr-view slide-list" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)"
+                dir="rtl" style="padding-right:15px;border-bottom: solid 3px gray;">
+                <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, 1)"><i class="fa fa-chevron-right fa-3x"></i></div>
+                <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-left fa-3x"></i></div>
+
+                <div class="col-md-3" show.bind="story_4.story_text != ''" style="float:right;padding-right:0px;">
                     <h4 show.bind="story_4.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_4, 'show')">&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>                        
-                        ${story_4.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>                        ${story_4.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_4.story_text ">
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_3.story_text != ''" style="float:right;">
+                <div class="col-md-3" show.bind="story_3.story_text != ''" style="float:right;padding-right:0px;">
                     <h4 show.bind="story_3.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_3, 'show')">&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>                        
-                        ${story_3.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>                        ${story_3.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_3.story_text ">
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_2.story_text != ''" style="float:right;">
+                <div class="col-md-3" show.bind="story_2.story_text != ''" style="float:right;padding-right:0px;">
                     <h4 show.bind="story_2.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_2, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>                        
-                        ${story_2.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>                        ${story_2.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_2.story_text ">
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3" show.bind="story_1.story_text != '' || user.privileges.EDITOR" style="float:right;">
+                <div class="col-md-3" show.bind="story_1.story_text != '' || user.privileges.EDITOR" style="float:right;padding-right:0px;">
                     <h4 show.bind="story_1.name" dir="rtl">
                         <i class="fa fa-square-o is-link" t="[title]stories.zoom" click.trigger="zoom_out(story_1, 'show')">&nbsp;&nbsp;</i>
-                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>                        
-                        ${story_1.name}
+                        <i if.bind="user.privileges.EDITOR" class="fa fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>                        ${story_1.name}
                     </h4>
                     <div class="story-panel">
                         <p dir="rtl" innerhtml.bind="story_1.story_text">
