--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -1,7 +1,11 @@
 <template>
     <require from='./photo-strip.css'></require>
     <div class="row slides-list" style="height: ${height}px;width: ${width};margin-left:auto;margin-right:auto;">
-        <a repeat.for="slide of slides" interact-draggable interact-dragend.delegate="shift_photos(slide, $event)" style="float:right;" click.delegate="on_click(slide, $event)">
+        <div if.bind="settings.arrows" class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
+        <div if.bind="settings.arrows"class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
+
+        <a repeat.for="slide of slides" interact-draggable interact-dragend.delegate="shift_photos(slide, $event)" style="float:right;"
+            click.delegate="on_click(slide, $event)">
                  <img id="img-${slide.photo_id}" src="${slide.src}" height="${height}" style="width:initial;" />
             </a>
     </div>
