--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -7,16 +7,9 @@
             <span if.bind="user.privileges.DEVELOPER">${member.member_info.id}</span>
             </h3>
         </div>
-        <div class="row slide-list">
-
-            <div class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
-            <div class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
-            <a repeat.for="slide of member.slides" click.trigger="photo_clicked(slide)" interact-draggable interact-dragend.delegate="shift_photos(slide, $event)">
-                 <img class="slide-photo" src="${slide.src}" style="float:right;" />
-            </a>
-        </div>
+        <photo-strip slides.bind="slides" source.bind="source" height.bind="220" id.bind="member.member_info.id" action_key="Zoom"
+            settings.bind="{arrows:true, height:220}"></photo-strip>
         <div>
-            <!-- if.bind="! user.editing"-->
             <div class="row content-area" style="min-height:280px;width:1170px;border-bottom: solid 3px gray;margin: 0;" dir="rtl">
                 <div class="col-md-6">
                     <div class="row" if.bind="member.family_connections.hasFamilyConnections">
@@ -118,8 +111,8 @@
             </div>
             <div class="row fr-view slide-list" if.bind="! user.editing" interact-draggable interact-dragend.delegate="shift_stories($event)"
                 dir="rtl" style="padding-right:15px;border-bottom: solid 3px gray;">
-                <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, 1)"><i class="fa fa-chevron-right fa-3x"></i></div>
-                <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-left fa-3x"></i></div>
+                <div if.bind="stories_scroll" class="slide-control next" click.trigger="next_story($event, -1)"><i class="fa fa-chevron-right fa-3x"></i></div>
+                <div if.bind="stories_scroll" class="slide-control prev" click.trigger="next_story($event, +1)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
                 <div class="col-md-3" show.bind="story_4.story_text != ''" style="float:right;padding-right:0px;">
                     <h4 show.bind="story_4.name" dir="rtl">
