--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -5,7 +5,7 @@
         <div if.bind="settings.arrows"class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
         <a repeat.for="slide of slides" interact-draggable interact-dragend.delegate="shift_photos(slide, $event)" style="float:right;"
-            click.delegate="on_click(slide, $event)">
+            click.trigger="on_click(slide, $event)">
                  <img id="img-${slide.photo_id}" src="${slide.src}" height="${height}" style="width:initial;" />
             </a>
     </div>
