--- a/src/app.html
+++ b/src/app.html
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div id="footer" class="navbar-fixed-bottomxxx navbar navbar-default" style="border:none;background-color:rgba(0,0,0,0);margin:0;padding:0;">
+    <div id="footer" class="navbar-fixed-bottom navbar navbar-default" style="border:none;background-color:rgba(0,0,0,0);margin:0;padding:0;">
       <div class="footer-area "></div>
     </div>
   </div>
