--- a/src/home/home.html
+++ b/src/home/home.html
@@ -1,7 +1,57 @@
 <template>
+    <require from='./home.css'></require>
     <div style="margin-top:60px;">
         <div id="photo-strip">
             <photo-strip source.bind="photo_list" slides.bind="slides" id="1" action.bind="action" settings.bind="{arrows:true, slide_show: 5}"></photo-strip>
         </div>
     </div>
+    <div class="row panel main-panel">
+        <div class="col-md-3 panel-vid">
+            <ul>
+                <li repeat.for="video of video_list" if.bind="video.type=='youtube'">
+                    <p>
+                        <span class="fr-video fr-fvc fr-draggable fr-dvi" contenteditable="false" draggable="true">
+                            <iframe src.bind="video.src" frameborder="0" allowfullscreen="" style="width: 204px; height: 121px;">
+                            </iframe>
+                        </span>
+                    </p>
+                </li>
+            </ul>
+        </div>
+        <div class="col-md-6 panel-stories">
+            <h2>
+                ${'home.sample-stories' | t}
+                <span style="float:left;font-size:80%;color:gray;direction:rtl;cursor:pointer;" click.delegate="goto_full_collection()">
+                    ${'home.full-collection' | t} 
+                    <i class="fa fa-play fa-rotate-180"> </i>
+                </span>
+            </h2>
+            <ul>
+            </ul>
+        </div>
+        <div class="col-md-3 panel-messages">
+            <h2>${'home.messages' | t}</h2>
+            <ul>
+            </ul>
+        </div>
+    </div>
+    <div style="height:20px"></div>
+    <div class="row member-of-the-day" dir="rtl" style="padding:0;padding-right:16px;">
+        <span style="width:100px;text-align:right;margin-top:20px;" >${member_prefix | t}</span>
+        <span style="padding-left:20px;padding-top:6px;"><img src.bind="member_of_the_day.face_photo_url" width="60" style="border-radius:50%;" /></span>
+        <span style="border-right:2px solid gray;margin-top:20px;margin-left:16px;padding-right:10px;">${member_of_the_day.name}</span>
+        <span if.bind="member_of_the_day.place_of_birth" style="border-right:2px solid gray;margin-top:20px;padding-right:10px;">
+            ${was_born_in | t}${member_of_the_day.place_of_birth}
+        </span>
+        <span style="margin-top:20px;padding-right:10px;margin-left:16px;" if.bind="member_of_the_day.year_of_birth">  
+            ${member_of_the_day.year_of_birth}
+        </span>
+        <span style="margin-top:20px;padding-right:10px;margin-left:16px;border-right:2px solid gray;" if.bind="member_of_the_day.year_of_death">  
+            ${died_in | t} ${member_of_the_day.year_of_death}
+        </span>
+        <span style="float:left;margin-top:20px;margin-left:16px;padding-right:16px;border-right:2px solid gray;">
+            ${'home.to-the-page-of' | t} ${member_of_the_day.name}
+        </span>
+    </div>
+
 </template>
