--- a/src/home/home.html
+++ b/src/home/home.html
@@ -26,7 +26,14 @@
                     <i class="fa fa-play fa-rotate-180"> </i>
                 </span>
             </h2>
-            <ul>
+            <ul style="max-height:220px;overflow:auto;">
+                <li repeat.for="story of stories_sample" dir="rtl">
+                    <div style="margin:0;padding:0;margin-top:12px;">
+                        <h4 dir="rtl" style="float:right;margin:0;padding:0;">${story.name}</h4><br/>
+                        <p dir="rtl" innerhtml.bind="story.story" style="text-align:right;max-height:50px;overflow:auto;font-size:11px;width:100%;margin:0;padding:0;">
+                        </p>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="col-md-3 panel-messages">
