--- a/src/user/login.html
+++ b/src/user/login.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="row centered-form">
+    <div class="row centered-form" dir="rtl">
         <div class="col-md-10 col-md-offset-1">
             <div class="panel panel-default">
                 <div class="panel-heading">
