--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./members.css"></require>
     <div style="margin-top:50px" class="content-area">
-        <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:15px;margin-right:0px;margin-left:0px;" <h3
+        <div class="row" style="background-color:lightgrey;padding:10px;margin-bottom:15px;margin-right:0px;margin-left:0px;font-size:150%;" <h3
             dir="rtl" style="float: right;margin:0px;">
             ${member.member_info.full_name }
             <span if.bind="user.privileges.DEVELOPER">${member.member_info.id}</span>
