--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
         <nav class="navbar navbar-default navbar-fixed-top navbar-centered sb-navbar" role="navigation" stylexxx="width:1200px;">
           <div class="navbar-header navbar-right" style="margin-left: 40px;">
             <a class="navbar-brand" href="#">
-              <span>
+              <span style="font-size:150%">
                 ${router.title & t}
                 <img src="${baseURL}/gbs/static/images/gb-logo.png" onerror="this.onerror=null;this.src='/images/gb-logo.png';" width="24" style="float:right;margin-left:15px;" />
               </span>
@@ -16,7 +16,7 @@
           </div>
 
           <div class="collapse navbar-collapse" id="skeleton-navigation-navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right" style="font-size:150%">
               <li repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''}">
                 <a data-toggle="collapse" data-target="#skeleton-navigation-navbar-collapse.in" href.bind="row.href">${row.title & t}</a>
               </li>
