--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -51,7 +51,7 @@
         }
 
         ux-dialog-overlay.active {
-            background-color: white;
+            background-color: black;
             opacity: 0.9;
         }
     </style>
