--- a/src/user/login.html
+++ b/src/user/login.html
@@ -1,6 +1,6 @@
 <template>
-    <div class="row centered-form" dir="rtl">
-        <div class="col-md-10 col-md-offset-1">
+    <div class="centered-form" dir="rtl" style="background-color:lightgray;">
+        <div>
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title text-center">${"user.please-login" & t}</h3>
