--- a/src/app.html
+++ b/src/app.html
@@ -43,7 +43,9 @@
       </div>
     </div>
     <div id="footer" class="navbar-fixed-bottom navbar navbar-default" style="border:none;background-color:rgba(0,0,0,0);margin:0;padding:0;">
-      <div class="footer-area "></div>
+      <div class="footer-area" style="padding-left:200px;padding-top:40px;">
+        <a style="padding-top: 50px;cursor:pointer;color:gray;" click.delegate="contact_us()">Built by Lifestone</a>
+      </div>
     </div>
   </div>
 </template>
